--- a/app/templates/app/p.html
+++ b/app/templates/app/p.html
@@ -48,5 +48,9 @@
           </form>
     </div>
 
+
+    <!--User profile link-->
+    <a class="nav-link" href="{% url 'app:userp'%}">User Profile</a></li>
+
 </body>
 </html>
