--- a/app/templates/app/basic.html
+++ b/app/templates/app/basic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="{% static 'js/script.js' %}"></script>
-    <title>Document</title>
+    <title>{%block title%} {%endblock%}</title>
 </head>
 <body>
   <!--Nav Bar start-->
@@ -18,17 +18,26 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'app:addpost'%}">Add a post</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'app:userp'%}">User Profile</a></li>
+                {% else %}
+                <a class="nav-link" href="{% url 'app:login_user'%}">Login</a></li>
+                {% endif %}
+              </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Settings
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'app:userp'%}">User Profile</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'app:logout_user'%}">Log out</a></li>
+                  {% if user.is_authenticated %}
+                  <li><a class="dropdown-item" href="{% url 'app:logout_user'%}">Logout</a></li>
+                  {% else %}
+                  <a class="nav-link" href="{% url 'app:login_user'%}">Login</a></li>
+                  {% endif %}
                 </ul>
               </li>
             </ul>
