--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -12,7 +12,8 @@
     </script>
 {% endif %}
 <div class="container mt-3 col-lg-5 col-md-auto col-sm-auto border ">
-    <form action="{%url 'app:login_user'%}" method='POST' >
+  <h2> Login</h2>
+    <form action="{%url 'login_user'%}" method='POST' >
         {% csrf_token%}
         <div class="mb-3">
             <label for="id_username" class="form-label">Username</label>
@@ -23,33 +24,25 @@
           <input type="password" class="form-control " id="id_password" name="password" required="">
           <div id="eerror" class="mb-3 text-danger"></div>
           <button class="btn btn-outline-secondary" id='bt1' type="button" onmouseover="getText()" onmouseout="getPassword()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
-              <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7 7 0 0 0 2.79-.588M5.21 3.088A7 7 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474z"/>
-              <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12z"/>
-            </svg>
+            <i class="bi bi-eye-slash-fill"></i>
           </button>
         </div>
+        <a href="{% url 'reset_password' %}" class="text-decoration-none"> Forgot Password ? </a> <br> <br>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <br>
-      <a href="{% url 'app:signup' %}" class="text-decoration-none"> Don't have an account ? </a>
+      <a href="{% url 'signup' %}" class="text-decoration-none"> Don't have an account ? </a>
 </div>
 <script>
   var password = document.getElementById('id_password');
   function getPassword(){
     let bt1 = document.getElementById('bt1');
-    bt1.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
-  <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7 7 0 0 0 2.79-.588M5.21 3.088A7 7 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474z"/>
-  <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12z"/>
-</svg>`;
+    bt1.innerHTML = `<i class="bi bi-eye-slash-fill"></i>`;
       password.type = 'password';
   }
   function getText(){
     let bt1 = document.getElementById('bt1');
-    bt1.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
-  <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
-  <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
-</svg>`;
+    bt1.innerHTML = `<i class="bi bi-eye-fill"></i>`;
     password.type = 'text';
   }
 </script>
