--- a/app/templates/app/basic.html
+++ b/app/templates/app/basic.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="{% static 'js/script.js' %}"></script>
     <title>{%block title%} {%endblock%}</title>
 </head>
@@ -12,7 +13,7 @@
   <!--Nav Bar start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand text-primary" href="{% url 'app:home'%}">College Studies Portal</a>
+          <a class="navbar-brand text-primary" href="{% url 'home'%}">College Studies Portal</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,12 +21,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:addpost'%}">Add a post</a>
+                <a class="nav-link" href="{% url 'addpost'%}">Add a post</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:userp'%}">User Profile</a></li>
+                <a class="nav-link" href="{% url 'userp'%}">User Profile</a></li>
                 {% else %}
-                <a class="nav-link" href="{% url 'app:login_user'%}">Login</a></li>
+                <a class="nav-link" href="{% url 'login_user'%}">Login</a></li>
                 {% endif %}
               </li>
               <li class="nav-item dropdown">
@@ -34,9 +35,9 @@
                 </a>
                 <ul class="dropdown-menu">
                   {% if user.is_authenticated %}
-                  <li><a class="dropdown-item" href="{% url 'app:logout_user'%}">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout_user'%}">Logout</a></li>
                   {% else %}
-                  <a class="nav-link" href="{% url 'app:login_user'%}">Login</a></li>
+                  <a class="nav-link" href="{% url 'login_user'%}">Login</a></li>
                   {% endif %}
                 </ul>
               </li>
