--- a/app/templates/app/forgot.html
+++ b/app/templates/app/forgot.html
@@ -2,10 +2,10 @@
 
 {%block body%}
 <div class="container mt-3 col-lg-5 col-md-auto col-sm-auto border ">
-    <form action={%url 'app:forgot'%} method='POST' >
+    <form action="{%url 'forgot'%}" method='POST' >
         {% csrf_token%}
         <div class="mb-3">
-            <label for="id_email" class="form-label">Email</label>
+            <label for="id_email" class="form-label">Enter your email to receive an OTP</label>
             <input type="text" class="form-control" id="id_email" name="email" required="">
           </div>
         <button type="submit" class="btn btn-primary">Click to receive OTP</button>
