--- a/app/templates/app/form.html
+++ b/app/templates/app/form.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>{%block title%} {% endblock %}</title>
 </head>
 <body data-bs-theme="dark" >
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand text-primary" href="{% url 'app:home' %}">College Studies Portal</a>
+            <a class="navbar-brand text-primary" href="{% url 'home' %}">College Studies Portal</a>
         </div>
       </nav>
        {%block body%} {%endblock%}
