--- a/app/templates/users/password_reset_confirm.html
+++ b/app/templates/users/password_reset_confirm.html
@@ -1,56 +1,118 @@
 {% extends "app/form.html" %}
-
+{% block title %} Password Reset {% endblock title%}
 {% block body %}
-<div class="container mt-5 col-lg-5 col-md-auto col-sm-auto border ">
-  <form method="post">
-    {%csrf_token%}
-    {{form}}
-    <br>
-    <input type="submit" class="btn btn-primary" value="Change Password">
-  </form>
-</div>
-   <!--
-    <div class="container mt-5 col-lg-5 col-md-auto col-sm-auto border ">
-        <form  method="post" >
-            {% csrf_token%}
-            <div class="mb-3">
-                <label for="id_new_password1" class="form-label">New Password:</label>
-                <input id="id_new_password1" class="form-control" type="password" name="new_password1" autocomplete="new-password" required="">
-              </div>
-            <button class="btn btn-outline-secondary" id='bt1' type="button" >
-                <i class="bi bi-eye-slash-fill"></i>
-            </button>
-            <div class="mb-3">
-                <label for="id_new_password2" class="form-label">New Password Confirmation:</label>
-                <input id="id_new_password2" class="form-control" type="password" name="new_password2" autocomplete="new-password" required="">
+    <div class="form-content my-3 p-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    {% if validlink %}
+                        <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                            <div class="card-header justify-content-center">
+                              <h3 class="font-weight-light my-4 text-center">Reset Your Password</h3>
+                            </div>
+                            {% if form.errors %}
+                                <div class="text-danger" id="perror" role="alert">
+                                    <div id="form_errors">
+                                        {% for key, value in form.errors.items %}
+                                            <strong>{{ value }}</strong>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            {% endif %}
+
+                            <div class="card-body">
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <div class="form-row">
+                                        <div class="col-md-10 offset-md-1">
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="id_new_password1">New Password</label>
+                                                <input type="password" name="new_password1" autocomplete="new-password"
+                                                       class="form-control" required id="id_new_password1"
+                                                       placeholder="Enter password"/>
+                                                  <button class="btn btn-outline-secondary" id='bt1' type="button" onmouseover="getTp1()" onmouseout="getPassp1()">
+                                                    <i class="bi bi-eye-slash-fill"></i>
+                                                  </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="col-md-10 offset-md-1">
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="id_new_password2">New Password Confirmation</label>
+                                                <input type="password" name="new_password2" autocomplete="new-password"
+                                                       required id="id_new_password2" class="form-control"
+                                                       placeholder="Confirm password"/>
+                                            </div>
+                                            <button class="btn btn-outline-secondary" id='bt2' type="button" onmouseover="getTp2()" onmouseout="getPassp2()">
+                                              <i class="bi bi-eye-slash-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="form-row">
+                                        <div class="col-md-10 offset-md-1">
+                                            <div class="form-group mt-0 mb-1">
+                                                <br>
+                                                <button type="submit" class="col-md-12 btn btn-primary" id="reset">Reset Password</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    {% else %}
+                    <div class="alert alert-warning">
+                        The password reset link was invalid, possibly because it has already been used.
+                        Please request a new password reset.
+                    </div>
+                    {% endif %}
+                </div>
             </div>
-            <button class="btn btn-outline-secondary" id='bt2' type="button" >
-              <i class="bi bi-eye-slash-fill"></i>
-          </button>
-          <br><br>
-            <input type="submit" class="btn btn-primary" value="Reset">
-          </form>
-          <br>
+        </div>
     </div>
-  -->
-    <script>
-        let password1 = document.getElementById('id_new_password1');
-        let password2 = document.getElementById('id_new_password2');
-        let bt1 = document.getElementById('bt1');
-        let bt2 = document.getElementById('bt2');
-        function getPassword(b,p){
-          b.innerHTML = `<i class="bi bi-eye-slash-fill"></i>`;
-          p.type = 'password';
-        }
-        function getText(b,p){
-          b.innerHTML = `<i class="bi bi-eye-fill"></i>`;
-          p.type = 'text';
-        }
-        bt1.onmouseover = () => getText(bt1,password1);
-        bt2.onmouseover = () => getText(bt2,password2);
-        bt1.onmouseout = () => getPassword(bt1,password1);
-        bt2.onmouseout = () => getPassword(bt2,password2);
 
+    <script defer>
+      var p1 = document.getElementById('id_new_password1')
+      var p2 = document.getElementById('id_new_password2')
+      function getTp1(){
+        let bt = document.getElementById('bt1');
+        bt.innerHTML =  `<i class="bi bi-eye-fill"></i>`;
+        p1.type = 'text';
+      }
+      function getPassp1(){
+        let bt = document.getElementById('bt1');
+        bt.innerHTML =  `<i class="bi bi-eye-slash-fill"></i>`;
+        p1.type = 'password'; 
+      }
+      function getTp2(){
+        let bt = document.getElementById('bt2');
+        bt.innerHTML =  `<i class="bi bi-eye-fill"></i>`;
+        p2.type = 'text';
+      }
+      function getPassp2(){
+        let bt = document.getElementById('bt2');
+        bt.innerHTML =  `<i class="bi bi-eye-slash-fill"></i>`;
+        p2.type = 'password'; 
+      }
+    document.addEventListener('DOMContentLoaded', function() {
+    const form = document.querySelector('form');
+    const password = document.querySelector('#id_new_password2');
+    form.addEventListener('submit', function(e) {
+      //Need to fix regex
+        let regex = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$/;
+        let pvalue = password.value;
+        if(regex.test(pvalue)){
 
-      </script>
-{% endblock body %}
+        }else {
+          let error = document.querySelector('#perror');
+          error.innerText = `Password must contain one lowercase letter, one uppercase letter, one special symbol and be atleast 8 characters long`;
+          e.preventDefault();
+        }
+        
+    })
+  })
+      
+    </script>
+
+{% endblock %}
