--- a/app/templates/app/posts.html
+++ b/app/templates/app/posts.html
@@ -59,7 +59,7 @@
             <p class="mt-2 text-break">
                 {{post.content}}
             </p>
-            <div class="container" id="like_counter_{{post.id}}"> {{post.likes.count}}</div>
+            <div class="container" id="like_counter_{{post.id}}">Likes: {{post.likes.count}}</div>
             <div class="d-flex justify-content-between mt-2">
                 {%if user.is_authenticated %}
                 {% if user in post.likes.all %}
