--- a/app/templates/app/userprofile.html
+++ b/app/templates/app/userprofile.html
@@ -14,8 +14,8 @@
                     <input type="file" id="id_pfp" name="pfp" accept="image/*">
                 </div>
                 <div class="col-6 border m-3">
-                    <label class="form-label"  for="id_username1">Username:</label>
-                    <input type="text" class="form-control"  name="username" id="id_username1" row="30" value="{{user.username}}" autocomplete="off">   
+                    <label class="form-label"  for="id_username">Username:</label>
+                    <input type="text" class="form-control"  name="username" id="id_username" row="30" value="{{user.username}}" autocomplete="off">   
                     <label class="form-label"  for="id_description">Description:</label>
                     <textarea class="form-control"  name="description" id="id_description" row="30" >{{user.userprofile.description}}</textarea>                    
                 </div>
