--- a/app/templates/app/addpost.html
+++ b/app/templates/app/addpost.html
@@ -1,15 +1,10 @@
-{%include "app/basic.html"%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Post</title>
-</head>
-<body>
-    {%block body%}
+{%extends "app/basic.html"%}
+
+{%block title%}Add post{%endblock%}
+
+{%block body%}
 <div class="container mt-3 col-lg-6 border ">
-    <form action={%url 'addpost'%} method='POST'>
+    <form action="{%url 'addpost'%}" method='POST' enctype="multipart/form-data">
         {% csrf_token%}
         <div class="mb-3">
             <label for="id_heading" class="form-label">Heading</label>
@@ -17,11 +12,21 @@
           </div>
         <div class="mb-3">
           <label for="id_content" class="form-label">Content</label>
-          <textarea class="form-control" id="id_content" required="" name="content"> </textarea>
+          <textarea class="form-control" id="id_content" required="" name="content" rows=1ddd0 style="max-height: 300px;min-height: 150px;"> </textarea>
+        </div>
+        <div class="mb-3">
+          <label for="id_file" class="form-label">Files</label>
+          <input type="file" name="file" id="id_file" class="form-control" accept="image/*,audio/*,video/*">
         </div>
         <button type="submit" class="btn btn-primary">Upload Post</button>
       </form>
 </div>
+
+<script>
+  let file = document.getElementById('id_file');
+  file.onchange = () => {
+    alert(this.files[0].size())
+  }
+</script>
+
 {%endblock%}
-</body>
-</html>
