--- a/app/templates/app/userprofile.html
+++ b/app/templates/app/userprofile.html
@@ -11,13 +11,13 @@
                 <div class="col-4 border m-3 justify-items-center">
                     <img src="/app{{user.userprofile.pfp.url}}" class="rounded-circle img-thumbnail"  alt="Image of the user {{user.username}}">
                     <label for="id_pfp"></label>
-                    <input type="file" id="id_pfp" name="pfp" accept="image/*">
+                    <input class="mb-3" type="file" id="id_pfp" name="pfp" accept="image/*">
                 </div>
                 <div class="col-6 border m-3">
                     <label class="form-label"  for="id_username">Username:</label>
                     <input type="text" class="form-control"  name="username" id="id_username" row="30" value="{{user.username}}" autocomplete="off">   
                     <label class="form-label"  for="id_description">Description:</label>
-                    <textarea class="form-control"  name="description" id="id_description" row="30" >{{user.userprofile.description}}</textarea>                    
+                    <textarea class="form-control mb-3"  name="description" id="id_description" row="30" style="height: 50%">{{user.userprofile.description}}</textarea>                    
                 </div>
             </div>
             <button class="btn btn-primary">Save Changes</button>
